--- a/Web/034/index.html
+++ b/Web/034/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>爱心跳动,3D拖拽搬</title>
+  <title>xiaoxin的爱心跳动</title>
   <link rel="stylesheet" href="./css/style.css">
 
 </head>
